# ask_shell

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  config_command.rs  conversation.rs  environment.rs  execute.rs  interaction.rs  main.rs  prompt.rs  shell.rs  status.rs  terminal.rs
src/provider/: anthropic.rs  mod.rs  openai.rs
